# CN-upload-results

./: .gitignore  20250924_8594_8600_8596 CN ACN reprocessed QC check.XLSX  README.md  pyproject.toml  requirements.txt  test_sample.json  test_sample_2.json
docs/: roadmap.md
src/cn_upload_results/: __init__.py  __main__.py  cli.py
src/cn_upload_results/clients/: __init__.py  qbench.py  supabase.py
src/cn_upload_results/config/: settings.py
src/cn_upload_results/domain/: models.py
src/cn_upload_results/parsers/: __init__.py  excel.py
src/cn_upload_results/services/: persistence.py
src/cn_upload_results/ui/: __init__.py  app.py  auth.py  loading_overlay.py  login.py  main_window.py  preview.py  publish_worker.py  style.py  upload.py
src/cn_upload_results/workflows/: __init__.py  upload.py
src/qbench_uploader/: __init__.py
src/qbench_uploader/clients/: qbench_client.py
src/qbench_uploader/config/: settings.py
src/qbench_uploader/parsers/: excel_parser.py
src/qbench_uploader/workflows/: sandbox_loader.py
tests/: test_placeholder.py
tests/unit/: test_excel_parser.py  test_persistence.py  test_publish_worker.py  test_workflow_upload.py
