[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbench-uploader"
version = "0.1.0"
description = "Automation to upload lab results from Excel files into QBench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "tenacity>=8.2",
    "PySide6>=6.7",
    "supabase>=2.3",
    "postgrest>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "black>=24.4",
    "ruff>=0.5",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
src = ["src"]
